# aichf

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: BTCUSDT.csv  DOGEUSDT.csv  ETHUSDT.csv  SOLUSDT.csv  SUIUSDT.csv  XRPUSDT.csv
docs/: concept_presentation.md
notebooks/: baseline_strategy.ipynb  fetch_data.ipynb  mpt.ipynb  risk.ipynb
notebooks/src/: edhec_risk_kit.py  indicators.py
