[project]
name = "AICryptoHedgeFund"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ruslan Khaydarpashich", email = "h.ruslan2000@yandex.ru"},
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "plotly",
    "seaborn",
    "tqdm",
    "scikit-learn",
    "pandas",
    "statsmodels",
    "arch",
    "jupyter",
    "ipykernel",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GNU"}


[tool.pdm]
distribution = false
[dependency-groups]

test = [
    "pytest",
]

dev = [
    "pre-commit",
]